Import of APLA/WWW-Yahoo-Links-0.02 from CPAN.
gitpan-cpan-distribution: WWW-Yahoo-Links
gitpan-cpan-version:      0.02
gitpan-cpan-path:         APLA/WWW-Yahoo-Links-0.02.tar.gz
gitpan-cpan-author:       APLA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 2008-08-06  Ivan Baktsheev <dot.and.thing@gmail.com>
 	
+	Release 0.02
+
+	Corrected «Error» response handling
+	
+	Fixed JSON version in requirements
+	
+	Verbose testing
+
+2008-08-06  Ivan Baktsheev <dot.and.thing@gmail.com>
+	
 	Release 0.01
 
 	Initial module
